--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
-	width: 880px;
+	width: 800px;
 	margin: 0 auto;
   }
   
@@ -111,6 +111,9 @@ h1, h2, h3, h4, h5 {
         padding: 20px;
     }
 
+    .cta {
+        width: 500px;
+    }
     .cta img {
         visibility: hidden;
     }
@@ -143,7 +146,7 @@ h1, h2, h3, h4, h5 {
     }
   }
 
-  @media(width: 800px) {
+  @media(max-width: 800px) {
     .container {
         width: 800px;
         padding: 20px;
