--- a/css/index.css
+++ b/css/index.css
@@ -65,9 +65,11 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
+ /*CSS begins here*/
+
 .container {
 	width: 800px;
-	margin: 0 auto;
+  margin: 0 auto;
   }
   
   /*Responsive CSS begins here*/
@@ -75,19 +77,15 @@ h1, h2, h3, h4, h5 {
   @media(max-width: 500px) {
   
     .container {
-        width: 500px;
-        padding-right: 20px;
-        padding-left: 20px;
+      width: 500px;
     }
+    
     .container header {
-        width: 500px;
-        display: flex;
         align-items: center;
         flex-direction: column-reverse;
     }
 
     .container header nav {
-        display: flex;
         flex-direction: column;
         margin-right: 0px;
         padding: 0px;
@@ -111,49 +109,31 @@ h1, h2, h3, h4, h5 {
         padding: 20px;
     }
 
-    .cta {
-        width: 500px;
-    }
     .cta img {
         visibility: hidden;
     }
 
-    .main-content{
-        margin-right: 10px;
-    }
-
     .top-content {
-        display: flex;
         flex-direction: column;
     }
 
-    .container .middle-img {
-        width: 450px;
-    }
-
     .bottom-content {
-        display: flex;
         flex-direction: column;
     }
 
     .text-content {
         margin-bottom: 20px;
-        width: 450px;
     }
 
-    .contact{
-        margin-right: 10px;
-    }
   }
 
   @media(max-width: 800px) {
-    .container {
-        width: 800px;
-        padding: 20px;
-    }
     
+    .container {
+       padding: 0 20px 0 20px; 
+    }
+
     header {
-        
         flex-direction: column-reverse;
     }
 
@@ -174,10 +154,9 @@ h1, h2, h3, h4, h5 {
         display: none;
     }
 
-    .main-content .middle-img {
-        width: 750px;
+    .contact {
+      margin: 0 auto;
     }
-
   }
 
   /*Header*/
@@ -257,7 +236,6 @@ h1, h2, h3, h4, h5 {
   }
   
   .main-content .top-content {
-	padding: 0 10px;
 	display: flex;
   }
   
@@ -271,13 +249,15 @@ h1, h2, h3, h4, h5 {
   }
   
   .main-content .middle-img {
-	margin-top: 20px;
+    margin-top: 20px;
+    height: 100%;
+    padding: 20px 0;
+    margin: 0 auto;
+    width: 100%;
   }
   
   .main-content .bottom-content {
 	display: flex;
-	margin-top: 37px;
-	padding: 0 10px;
   }
   
   .main-content .bottom-content .text-content {
@@ -291,7 +271,7 @@ h1, h2, h3, h4, h5 {
   .contact {
 	margin-top: 57px;
 	border-top: 1px solid black;
-	padding: 39px 10px 0;
+	padding: 39px 0;
   }
   
   .contact p {
